# InterviewBot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  celery_worker.py  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  settings.py
_data/: populate_questions.py
_data/questions/: eng.json  ukr.json
celery_task/: tasks.py
config/: .env.local
controllers/: answer.py  question.py
database/: db.py
exceptions/: base.py  handlers.py
models/: answer.py  question.py
schemas/: answer.py  question.py  result.py
services/check_answer/: engine.py
services/language_models/: open_ai.py
src/conf/: config.py
tests/functional/: conftest.py
tests/functional/views/: test_answer.py  test_question.py  test_result.py
tests/mock_stuff/: answers.py
views/: answer.py  question.py  result.py
