[tool.poetry]
name = "InterviewBotvirtual"
version = "0.1.0"
description = ""
authors = ["Sikan777 <sikanbog@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"